--- a/Styles/style.css
+++ b/Styles/style.css
@@ -65,7 +65,7 @@ body button {
 }
 
 .gimg1 {
-  background-image: url("../pics/chill.jpg");
+  background-image: url("../pics/adatokminta3.png");
 }
 .gimg2 {
   background-image: url("../pics/pár.jpg");
