--- a/Styles/form.css
+++ b/Styles/form.css
@@ -17,7 +17,6 @@
   top: 30px;
   margin-left: auto;
   margin-right: auto;
-  
   min-width: 30%;
   max-width: 35%;
   background-color: #1f1f21;
@@ -28,16 +27,15 @@
 @media screen and (max-width: 700px) {
 
   .form{
-    float: right;
-    right: 0;
+    color: #e3fc02;
     margin-top: 6rem;
     margin-bottom: 5rem;
-    margin-right: 1.3rem;
-    max-width: 35%;
-    padding: 16px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 85%;
     background-color: #1f1f21;
     font-family: monospace;
-    color:black;
+    
   }
 
 }
