--- a/Styles/felhasznalo.css
+++ b/Styles/felhasznalo.css
@@ -50,7 +50,6 @@ hr{
 }
 
 input {
-  /*position: relative;*/
   padding: 1rem;
   font-family: monospace;
   font-weight: 500;
@@ -83,11 +82,22 @@ input:focus {
   display: block;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 1.5rem;
   box-shadow: 0.5rem 0.5rem;
   border-width: 2px;
   border-color: black;
   border-style: solid;
   border-radius: 5px;
+}
+
+#submit:hover{
+  box-shadow: 0.6rem 0.6rem;
+}
+
+#center{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media screen and (max-width: 700px) {
