--- a/Components/TaskManager/TaskList/TaskList.css
+++ b/Components/TaskManager/TaskList/TaskList.css
@@ -7,7 +7,7 @@
 }
 .container{
   background-color:white;
-  width: max-content;
+  width: 27rem;
   padding: 1rem;
   height: fit-content;
   position: relative;
