--- a/Styles/felhasznalo.css
+++ b/Styles/felhasznalo.css
@@ -65,6 +65,9 @@ input:focus {
 }
 
 .profilkep{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   color: black;
   padding: 0.5rem;
