--- a/Styles/felhasznalo.css
+++ b/Styles/felhasznalo.css
@@ -79,7 +79,7 @@ input:focus {
   margin-right: auto;
 }
 
-#submit{
+.submit{
   width: 80%;
   color: black;
   display: block;
@@ -93,7 +93,7 @@ input:focus {
   border-radius: 5px;
 }
 
-#submit:hover{
+.submit:hover{
   box-shadow: 0.6rem 0.6rem;
 }
 
